third_party/move/move-compiler/tests/move_check/naming/named_address_not_distinct_from_value.exp
error[E04001]: restricted visibility
   ┌─ tests/move_check/naming/named_address_not_distinct_from_value.move:18:9
   │
 6 │     const C: u64 = 0;
   │           - Constants are internal to their module, and cannot can be accessed outside of their module
   ·
18 │         0x42::M::C;
   │         ^^^^^^^^^^ Invalid access of '0x42::M::C'

